# open_manipulator_with_tb3

./: README.md
open_manipulator_with_tb3_description/urdf/: open_manipulator_with_tb3.gazebo.xacro  open_manipulator_with_tb3_waffle2.urdf.xacro  open_manipulator_with_tb3_waffle3.urdf.xacro  open_manipulator_with_tb3_waffle_pi.urdf.xacro  turtlebot3_waffle2.gazebo.xacro  turtlebot3_waffle3.gazebo.xacro  turtlebot3_waffle_for_open_manipulator2.urdf.xacro  turtlebot3_waffle_for_open_manipulator3.urdf.xacro
open_manipulator_with_tb3_tools/: CMakeLists.txt
open_manipulator_with_tb3_tools/launch/: open_manipulator_with_tb3_controller1.launch  open_manipulator_with_tb3_controller2.launch  open_manipulator_with_tb3_controller3.launch  open_manipulator_with_tb3_getset.launch  open_manipulator_with_tb3_navigation1.launch  open_manipulator_with_tb3_navigation2.launch  open_manipulator_with_tb3_navigation3.launch  open_manipulator_with_tb3_pick1.launch  open_manipulator_with_tb3_pick2.launch  open_manipulator_with_tb3_pick3.launch  open_manipulator_with_tb3_place1.launch  open_manipulator_with_tb3_place2.launch  open_manipulator_with_tb3_place3.launch
open_manipulator_with_tb3_tools/maps/: map.yaml  map1.pgm  map1.yaml  map2.pgm  map2.yaml  map3.pgm  map3.yaml
open_manipulator_with_tb3_tools/nodes/: controller_for_pick_and_place1  controller_for_pick_and_place2  controller_for_pick_and_place3
open_manipulator_with_tb3_tools/param/: dwa_local_planner_params_waffle.yaml
open_manipulator_with_tb3_tools/rviz/: open_manipulator_with_tb3_navigation3.rviz
open_manipulator_with_tb3_tools/src/: getsetposition.cpp  pick1.cpp  pick2.cpp  pick3.cpp  place1.cpp  place3.cpp
open_manipulator_with_tb3_waffle_moveit/launch/: demo2.launch
